fix alignment and optimise musescore icon

--- a/assets/css/_social-sidebar.scss
+++ b/assets/css/_social-sidebar.scss
@@ -54,14 +54,12 @@
     }
 }
 
-i.social-icon {
+i.social-icon,
+i.social-icon-img {
     color: var(--main-text-color) !important;
     font-size: 18px;
     padding: 3px;
     margin: 2px;
-}
-
-i.social-icon-img {
     padding: 2px;
     margin: 2px;
 
